--- a/index.html
+++ b/index.html
@@ -8,34 +8,33 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </head>
-<div class="container-fluid">
-        <!-- Content here -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">Christopher Teodoro</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                  <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="#">About Me <span class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="#">Portfolio</a>
-                    <a class="nav-item nav-link" href="#">Contact</a>
-                </div>
-                </div>
-              </nav>
+  <div class="container-Main">
+  <!-- Main Contained with dive above here! Below holds Navbar!!-->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Christopher Teodoro</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a class="nav-item nav-link active" href="#">About Me <span class="sr-only">(current)</span></a>
+          <a class="nav-item nav-link" href="#">Portfolio</a>
+          <a class="nav-item nav-link" href="#">Contact</a>
+        </div>
+    </div>
+  </nav>
               
-      <body>
-            <div class="container">
-                    <div class="row">
-                      <div class="col-sm-12">
-                        <h1>About Me</h1>
-                      </div>
-                        </div>
-                    </div>
-                  </div>        
-      </body>
-      <!--Content within this container div-->
-</div>
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <h1>About Me</h1>
+            </div>
+        </div>
+    </div>        
+</body>
+    <!--Content within this container div-->
+    </div>
 </html>
 
 
